--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@angular/animations": "~7.2.0",
     "@angular/cdk": "^7.3.7",
     "@angular/cli": "~7.3.8",
-    "@angular/compiler-cli": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.0",
@@ -28,13 +28,16 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
-    "typescript": "~3.2.2",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ngx-alerts": "^3.4.1",
+    "ngx-gallery": "^5.10.0",
     "ngx-spinner": "^7.1.4",
     "npm": "^6.9.0",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -56,7 +59,7 @@
     "tslint": "~5.11.0"
   },
   "engines": {
-    "node" : "~8.11.3",
-    "npm" : "~5.6.0"
+    "node": "~8.11.3",
+    "npm": "~5.6.0"
   }
 }
