--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-alerts": "^3.4.1",
+    "ngx-file-drop": "^6.0.1",
     "ngx-gallery": "^5.10.0",
     "ngx-spinner": "^7.1.4",
     "npm": "^6.9.0",
