--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "angular-notifier": "^4.1.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "ngx-alerts": "^3.4.1",
     "ngx-file-drop": "^6.0.1",
     "ngx-gallery": "^5.10.0",
     "ngx-spinner": "^7.1.4",
