--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/free-brands-svg-icons": "^5.6.3",
+    "@ngx-share/button": "^7.1.2",
+    "@ngx-share/buttons": "^7.1.2",
+    "@ngx-share/core": "^7.1.2",
     "angular-notifier": "^4.1.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
