--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@angular/router": "~7.2.0",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/free-brands-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@ngx-share/button": "^7.1.2",
     "@ngx-share/buttons": "^7.1.2",
     "@ngx-share/core": "^7.1.2",
@@ -40,6 +40,7 @@
     "hammerjs": "^2.0.8",
     "ngx-file-drop": "^6.0.1",
     "ngx-gallery": "^5.10.0",
+    "ngx-infinite-scroll": "^7.1.0",
     "ngx-spinner": "^7.1.4",
     "npm": "^6.9.0",
     "path": "^0.12.7",
