--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngx-share/button": "^7.1.2",
     "@ngx-share/buttons": "^7.1.2",
     "@ngx-share/core": "^7.1.2",
+    "@ngx-translate/core": "^11.0.1",
     "angular-notifier": "^4.1.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
