--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "hammerjs": "^2.0.8",
     "ngx-file-drop": "^6.0.1",
     "ngx-gallery": "^5.10.0",
+    "ngx-image-cropper": "^1.3.9",
     "ngx-infinite-scroll": "^7.1.0",
     "ngx-spinner": "^7.1.4",
     "npm": "^6.9.0",
