--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "ngx-file-drop": "^6.0.1",
     "ngx-gallery": "^5.10.0",
     "ngx-image-cropper": "^1.3.9",
     "ngx-infinite-scroll": "^7.1.0",
+    "ngx-moment": "^3.4.0",
     "ngx-spinner": "^7.1.4",
     "npm": "^6.9.0",
     "path": "^0.12.7",
