add node compress

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod",
-    "heroku-postbuild": "ng build --prod &&  gzipper --verbose ./dist/SellItClient ./dist/SellItClient/build"
+    "heroku-postbuild": "ng build --prod &&  gzipper --verbose ./dist/SellItClient "
   },
   "private": true,
   "dependencies": {
@@ -36,6 +36,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "angular-notifier": "^4.1.1",
+    "compression": "^1.7.4",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
